feat: working endpoint for orders to pack